--- a/README.org
+++ b/README.org
@@ -2,20 +2,20 @@
 
 Using a simple wrapper script called =turtle= allows your Turtle shell programs to execute with a simple shebang. [[http://nixos.org/nix][Nix]] will take care of installing the necessary dependencies if you don't have them already.
 
-** Set your PATH environment varible using =bin/env=.
+** Put turtle onto your PATH
 
 #+begin_src shellsession
 $ source bin/env
 #+end_src
 
-** Then you can execute the sample Turtle scripts like this:
+** Execute example Turtle scripts
 
 #+begin_src shellsession
 $ examples/hello-turtle
 Turtle
 #+end_src
 
-** a Turtle Shell script can start with a simple shebang:
+** Example Turtle shell script with simple shebang
 
 #+begin_src Haskell
 #!/usr/bin/env turtle
