--- a/README.org
+++ b/README.org
@@ -18,7 +18,7 @@ Turtle
 #+end_src
 
 
-** Example Turtle shell script with simple shebang
+** a Turtle shell script with simple shebang
 
 #+begin_src Haskell
 #!/usr/bin/env turtle
